--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ fl=1
 <style type="text/css">
 <!--
 body {
-background-color: #00FFFF;
+background-color: #000000;
 }
 .style1 {
 color: #000000;
@@ -42,7 +42,7 @@ font-size: 24px;
 }
 .style2 {color: #000000; font-size: 18px; }
 .style3 {
-color: #FF00FF;
+color: #ffffff;
 font-weight: bold;
 font-size: 24px;
 }
