--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ font-size: 24px;
 
 <div id="By" style="position:absolute; left:615px; top:380px; width:50px;height:198px;">
 
-<input type="button" value=" YES " onClick="f1()" />
+<input type="button" value=" YES " onClick="https://api.whatsapp.com/send?phone=085726269397" />
 </div>
 <div ID="Bn" style="position:absolute; left:688px; top:380px; width:210px; height:210px;">
 <input name="button" type="button" onMouseOver="f()" value=" NO " />
