--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Kunyatakan Cinta <3 </title>
+<title>hehe <3 </title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="author" content="http://www.javascriptbank.com/" />
 <meta name="distribution" content="Global" />
