--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ font-size: 24px;
 
 <div id="By" style="position:absolute; left:615px; top:380px; width:50px;height:198px;">
 
-<input type="button" value=" YES " href="https://api.whatsapp.com/send?phone=6285726269397&text=iya aku mau jadi pacar kamu" onClick="alert('YESSS')" />
+<input type="button" value=" YES " href="https://api.whatsapp.com/send?phone=6285726269397&text=iya aku mau jadi pacar kamu" />
 </div>
 <div ID="Bn" style="position:absolute; left:688px; top:380px; width:210px; height:210px;">
 <input name="button" type="button" onMouseOver="f()" value=" NO " />
