--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 fl=1
 function f1()
 {
-alert("Makasih yaaa... tolong kirim wa ke aku yaa... ")}
+ src="URL"
 function f(){
 if(fl==1)
 {
@@ -52,7 +52,13 @@ font-size: 24px;
 
 <div id="By" style="position:absolute; left:615px; top:380px; width:50px;height:198px;">
 
-<input type="button" value=" YES " href="https://api.whatsapp.com/send?phone=6285726269397&text=iya aku mau jadi pacar kamu" />
+<button onclick="myFunction()">YES</button>
+
+<script>
+function myFunction() {
+  location.href = "https://api.whatsapp.com/send?phone=6285726269397&text=Aku%20Mau%20Kok%20Jadi%20Pacar%20Kamu";
+}
+</script>
 </div>
 <div ID="Bn" style="position:absolute; left:688px; top:380px; width:210px; height:210px;">
 <input name="button" type="button" onMouseOver="f()" value=" NO " />
