--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="author" content="http://www.javascriptbank.com/" />
 <meta name="distribution" content="Global" />
 <meta name="copyright" content="JavaScriptBank.com" />
+<link rel="stylesheet" href="style.css">
 <script type="text/javascript">
 fl=1
 function f1()
@@ -64,8 +65,17 @@ function myFunction() {
 <input name="button" type="button" onMouseOver="f()" value=" NO " />
 </div>
 
-<div align="center" class="style3">MAUKAH KAU JADI KEKASIH HATIKU ?????
-</div>
+<section>
+        <div class="textme">
+            <h1>Hallo :)</h1>
+            <p>Saya suka sama kamu,apa kamu mau jadi pacar saya? </p>
+<div class="jancok">
+
+
+            <div class="wrap">
+                <a href="#modal-one" class="btn btn-big">Mau</a>
+            </div>
+
 <p class="style1">  </p>
 <p> </p>
 </BODY>
