--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>hehe <3 </title>
+<title><3 </title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="author" content="http://www.javascriptbank.com/" />
 <meta name="distribution" content="Global" />
@@ -9,6 +9,7 @@
 fl=1
 function f1()
 {
+ location.href = "https://api.whatsapp.com/send?phone=6285726269397&text=Aku%20Mau%20Kok%20Jadi%20Pacar%20Kamu";
 function f(){
 if(fl==1)
 {
@@ -28,15 +29,12 @@ Bn.style.top=235
 Bn.style.left=360
 fl=1
 }
-function myFunction() {
-  location.href = "https://api.whatsapp.com/send?phone=6285726269397&text=Aku%20Mau%20Kok%20Jadi%20Pacar%20Kamu";
-}
 }
 </script>
 <style type="text/css">
 <!--
 body {
-background-color: #000000;
+background-color: #00FFFF;
 }
 .style1 {
 color: #000000;
@@ -44,7 +42,7 @@ font-size: 24px;
 }
 .style2 {color: #000000; font-size: 18px; }
 .style3 {
-color: #ffffff;
+color: #FF00FF;
 font-weight: bold;
 font-size: 24px;
 }
@@ -54,14 +52,13 @@ font-size: 24px;
 
 <div id="By" style="position:absolute; left:615px; top:380px; width:50px;height:198px;">
 
-<button onclick="myFunction()">YES</button>
-
+<input type="button" value=" YES " onClick="f1()" />
 </div>
 <div ID="Bn" style="position:absolute; left:688px; top:380px; width:210px; height:210px;">
 <input name="button" type="button" onMouseOver="f()" value=" NO " />
 </div>
 
-<div align="center" class="style3">MAUKAH KAU JADI KEKASIH HATIKU ?????
+<div align="center" class="style3">MAU KAH KAU JADI PACARKU?
 </div>
 <p class="style1">  </p>
 <p> </p>
