--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 fl=1
 function f1()
 {
- location.href = "https://api.whatsapp.com/send?phone=6285726269397&text=Aku%20Mau%20Kok%20Jadi%20Pacar%20Kamu";
+ location.href = "https://api.whatsapp.com/send?phone=6285726269397&text=Aku%20Mau%20Kok%20Jadi%20Pacar%20Kamu";}
 function f(){
 if(fl==1)
 {
