--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ fl=1
 <style type="text/css">
 <!--
 body {
-background-color: #00FFFF;
+background-color: #000000;
 }
 .style1 {
 color: #000000;
@@ -42,9 +42,14 @@ font-size: 24px;
 }
 .style2 {color: #000000; font-size: 18px; }
 .style3 {
-color: #FF00FF;
-font-weight: bold;
-font-size: 24px;
+border: 2px solid #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 5rem 10rem;
+    cursor: pointer;
+    border-radius: 20px;
 }
 -->
 </style></head>
