--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@ font-size: 24px;
 }
 .style2 {color: #000000; font-size: 18px; }
 .style3 {
+ color: #ffffff;
 border: 2px solid #fff;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 5rem 10rem;
-    cursor: pointer;
     border-radius: 20px;
 }
 -->
